# LogSight-AI

./: .dockerignore  .env.example  .gitignore  App_demo.py  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Core Architecture   Docker   Dockerfile  File Structure   Makefile  Metrics.MD  Procfile  README.md  app.py  benchmarks.md  demo.app.py  docker-compose.yml  dockerignore  log_simulator.py  pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  service.yaml  streamlit_app.py
.github/workflows/: benchmarks.yml  ci.yml  data-validation.yml  release.yml  sast.yml  security.yml
agents/: guards.py  orchestrator.py  state.py
analysis/: clustering.py  llm_interface.py  transformer_model.py
api/: main.py
config/: settings.yaml
core/: anomaly_model.py  ingestion.py  metrics.py  preprocessing.py
docs/: architecture.md  metrics.md
experiments/: mlflow_tracking.py
github/ISSUE_TEMPLATE/: bug_report.md
github/workflows/: ci.yml  container-scan.yml  docker-publish.ym  docs-deploy.yml
infra/ansible/: blue_green.yml
infra/otel/: otel-collector.yaml
ingestion/: kafka_producer.py
logsight/: __init__.py  analyzer.py  cli.py  parser.py
observability/: metrics.yaml  prometheus_metrics.py
orchestration/n8n/: incident_workflow.json
processing/: log_parser.py
proto/: logsight.proto
services/: streaming.py
src/: inference.py
src/cpp/: simd_tokenizer.cpp
templates/: deployment.yaml
tests/: __init__.py  test_analyzer.py  test_cli.py  test_inference.py  test_parser.py  test_pipeline.py
ui/: streamlit_app.py
(+5 files in other folders)
